--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.1",
   "description": "a congfiguration spec to spin up graphql backends with mongodb, redis and elastic search",
   "main": "server.js",
-  "scripts": {
+  "directories": {
     "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -32,5 +35,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
