--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ajv": "^6.7.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.4.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
