--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "nyc mocha",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "start": "node server.js"
   },
   "repository": {
