--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "NODE_ENV=test nyc mocha",
+    "test": "NODE_ENV=test nyc _mocha",
     "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
     "start": "node server.js"
   },
