--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "NODE_ENV=test nyc _mocha",
-    "coverage": "NODE_ENV=test nyc report --reporter=text-lcov | coveralls",
+    "cover": "istanbul cover _mocha",
+    "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "start": "node server.js"
   },
   "repository": {
@@ -42,7 +43,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.2",
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
-    "nyc": "^13.1.0"
+    "mocha-lcov-reporter": "^1.3.0"
   }
 }
