--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@umran/apify",
   "version": "0.0.1",
   "description": "a congfiguration spec to spin up graphql backends with mongodb, redis and elastic search",
-  "main": "server.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
