added handler methods and corrected readme

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "homepage": "https://github.com/umran/apify#readme",
   "dependencies": {
     "ajv": "^6.7.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
     "graphql-iso-date": "^3.6.1",
     "mongoose": "^5.4.5"
