changed npm description and made populations list nested projections conditionally

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@umran/apify",
   "version": "4.0.1",
-  "description": "a congfiguration spec to spin up graphql backends with mongodb, redis and elastic search",
+  "description": "A tool to bootstrap modern content management and delivery systems using GraphQL, MongoDB, Redis and Elasticsearch.",
   "main": "index.js",
   "directories": {
     "test": "test"
